# Lumina

./: .gitignore  ARCHITECTURE.md  DOCKER.md  README.md  TESTING.md  docker-compose.yml  package-lock.json
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_add_book_added_by.py
backend/app/: auth.py  config.py  db.py  deps.py  main.py  models.py  recommendation_ml.py  schemas.py
backend/app/llm/: __init__.py  base.py  mock.py  ollama.py  openai.py  prompts.py
backend/app/routers/: auth.py  books.py  recommendations.py
backend/app/storage/: __init__.py  base.py  local.py  s3.py
frontend/: README.md  jest.config.js  package-lock.json  package.json
frontend/src/app/: error.jsx  layout.jsx  page.jsx
frontend/src/app/books/: page.jsx
frontend/src/app/books/[id]/: page.jsx
frontend/src/app/books/new/: page.jsx
frontend/src/app/login/: page.jsx
frontend/src/app/profile/: page.jsx
frontend/src/app/recommendations/: page.jsx
frontend/src/app/signup/: page.jsx
frontend/src/components/: BookCard.jsx  BookViewModal.jsx  ErrorMessage.jsx  LoadingSpinner.jsx  Nav.jsx  Toaster.jsx
frontend/src/lib/: api.js  auth-context.js
frontend/src/styles/: globals.css
