[project]
name = "luminalib-backend"
version = "0.1.0"
description = "LuminaLib API"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["alembic/versions", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
